--- a/Vision_play.ipynb
+++ b/Vision_play.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "id": "6841dc06",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "id": "73bad972",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
        "-1"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,6 @@
     "            pass\n",
     "\n",
     "        # face\n",
-    "        \"\"\"\n",
     "        mp_drawing.draw_landmarks(\n",
     "            image,\n",
     "            results.face_landmarks,\n",
@@ -131,7 +130,6 @@
     "            landmark_drawing_spec=None,\n",
     "            connection_drawing_spec=mp_drawing_styles\n",
     "                .get_default_face_mesh_contours_style())\n",
-    "        \"\"\"\n",
     "        # pose\n",
     "        mp_drawing.draw_landmarks(\n",
     "            image,\n",
@@ -165,26 +163,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "15e57e79",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "x: 0.624258279800415\n",
-       "y: 0.8698612451553345\n",
-       "z: -0.10651502758264542\n",
-       "visibility: 0.9980857968330383"
+       "google.protobuf.pyext._message.RepeatedCompositeContainer"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lm_pose[11]"
+    "type(lm_pose)"
    ]
   },
   {
@@ -204,89 +199,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "angles = {'Left Arm': [11,13,15], 'Right Arm': [12,14,16]}\n",
-    "l_arm = tcv.TrackCV(angles)"
+    "pose_angles = {'Left Arm': [11,13,15], 'Right Arm': [12,14,16]}\n",
+    "hand_angles = {'hand': [4,0,8]}\n",
+    "body = tcv.TrackCV(pose_angles, hand_angles)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "6e726b66",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO: Created TensorFlow Lite XNNPACK delegate for CPU.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "l_arm.track()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "c9e5919f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[11, 13, 15]\n",
-      "[12, 14, 16]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[[11, 13, 15], [12, 14, 16]]"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d = {'LA': [11,13,15], 'RA': [12,14,16]}\n",
-    "for lms in d.values():\n",
-    "    print(lms)\n",
-    "lms = list(d.values())\n",
-    "lms"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "44c63fd9",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'lms' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/54/r4mn0pdd0nq5r22jyk2sksz00000gn/T/ipykernel_62476/3587532494.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlm_pose\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlm_pose\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'lms' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "c = [[lm_pose[lms[i][j]].x,lm_pose[lms[i][j]].y] for i in range(len(lms)) for j in range(3)]\n",
-    "c = np.array(c)\n",
-    "c"
+    "body.track(showText=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36dd67a9",
+   "id": "f3758ca3",
    "metadata": {},
    "outputs": [],
    "source": []
