--- a/Vision_play.ipynb
+++ b/Vision_play.ipynb
@@ -163,27 +163,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "15e57e79",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "google.protobuf.pyext._message.RepeatedCompositeContainer"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(lm_pose)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "id": "2f86c08b",
    "metadata": {},
@@ -194,30 +173,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "86d5435e",
    "metadata": {},
    "outputs": [],
    "source": [
     "pose_angles = {'Left Arm': [11,13,15], 'Right Arm': [12,14,16]}\n",
-    "hand_angles = {'hand': [4,0,8]}\n",
-    "body = tcv.TrackCV(pose_angles, hand_angles)"
+    "l_hand_angles = {'L_hand': [4,1,8]}\n",
+    "r_hand_angles = {'R_hand': [4,0,20]}\n",
+    "body = tcv.TrackCV(pose_angles, l_hand_angles, r_hand_angles)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
+   "id": "0d4266b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "body.set_show_text(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "6e726b66",
    "metadata": {},
    "outputs": [],
    "source": [
-    "body.track(showText=True)"
+    "body.track()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f3758ca3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv2.pollKey()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3758ca3",
+   "id": "6400acba",
    "metadata": {},
    "outputs": [],
    "source": []
