--- a/Vision_play.ipynb
+++ b/Vision_play.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "id": "6505b281",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2\n",
+    "import cv2 as cv\n",
     "import mediapipe as mp\n",
     "import numpy as np\n",
-    "from pynput.mouse import Button, Controller as MouseController\n",
-    "from pynput.keyboard import Key, Controller as KeyboardController"
+    "import time\n",
+    "import pyautogui\n",
+    "import pydirectinput"
    ]
   },
   {
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "id": "2f86c08b",
    "metadata": {},
    "outputs": [],
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "id": "86d5435e",
    "metadata": {},
    "outputs": [],
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 4,
    "id": "0d4266b3",
    "metadata": {},
    "outputs": [],
@@ -57,12 +58,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6e726b66",
    "metadata": {},
    "outputs": [],
    "source": [
     "body.track()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "45d995c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mp_drawing = mp.solutions.drawing_utils\n",
+    "mp_drawing_styles = mp.solutions.drawing_styles\n",
+    "mp_holistic = mp.solutions.holistic\n",
+    "cap = cv.VideoCapture(0, cv.CAP_DSHOW)\n",
+    "cap.set(3, 1920)\n",
+    "cap.set(4, 1080)\n",
+    "\n",
+    "with mp_holistic.Holistic(min_detection_confidence=0.5,\n",
+    "    min_tracking_confidence=0.5) as holistic:\n",
+    "    while cap.isOpened():\n",
+    "        success, image = cap.read()\n",
+    "        if not success:\n",
+    "            print(\"Ignoring empty camera frame.\")\n",
+    "            # If loading a video, use 'break' instead of 'continue'.\n",
+    "            break\n",
+    "\n",
+    "        results = holistic.process(image)\n",
+    "\n",
+    "        image.flags.writeable = True\n",
+    "        \n",
+    "    # draw left hand\n",
+    "        mp_drawing.draw_landmarks(\n",
+    "            image,\n",
+    "            results.left_hand_landmarks,\n",
+    "            mp_holistic.HAND_CONNECTIONS,\n",
+    "            landmark_drawing_spec=mp_drawing_styles.get_default_hand_landmarks_style())\n",
+    "        \n",
+    "    # draw right hand\n",
+    "        mp_drawing.draw_landmarks(\n",
+    "            image,\n",
+    "            results.right_hand_landmarks,\n",
+    "            mp_holistic.HAND_CONNECTIONS,\n",
+    "            landmark_drawing_spec=mp_drawing_styles.get_default_hand_landmarks_style())\n",
+    "        \n",
+    "        \n",
+    "        cv.imshow('Test', cv.flip(image, 1))\n",
+    "        if cv.waitKey(1) & 0xFF == ord('q'):\n",
+    "            break\n",
+    "            \n",
+    "cap.release()\n",
+    "cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "6ce76817",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "x: 0.5536500811576843\n",
+       "y: 0.24105742573738098\n",
+       "z: -0.0368364155292511"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results.right_hand_landmarks.landmark[8]"
    ]
   },
   {
@@ -75,41 +149,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 45,
    "id": "e807580f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mouse = MouseController()\n",
-    "keyboard = KeyboardController()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "id": "449b6243",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for x in range(100):\n",
-    "    for y in range(100):\n",
-    "        mouse.move(1,2)"
+    "time.sleep(4)\n",
+    "pyautogui.move(100,0, .5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0aa9b5ec",
+   "id": "0150fb82",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#xt = results.right_hand_landmarks.landmark[8].x\n",
+    "#yt = results.right_hand_landmarks.landmark[8].y\n",
+    "#pyautogui.moveTo(w-(xt*w), yt*h, 0.1)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ComputerVis",
    "language": "python",
-   "name": "python3"
+   "name": "computervis"
   },
   "language_info": {
    "codemirror_mode": {
@@ -121,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
